2013-07-15  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (create_report_omp): replace "%" with "%%" in imported
	report XML to avoid misinterpretation as format placeholders by
	g_markup_vprintf_escaped in omp function.

2013-07-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_report): Use "severity" instead of "type" as sort
	field.

2013-07-12  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xml (override-detailed): Add new severity score to
	"from ... to ..." text.

2013-07-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result [result-headers]): Use "severity" as the sort
	field instead of type, to match the header name.

2013-07-11  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (result [result-headers]): Use "location" as the sort
	field instead of port, to match the header name.

2013-07-11  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/gsad_omp.c (save_override_omp): Add command parameter
	"new_severity".

	* src/html/omp.xml (html-edit-override-form): Add "New Severity"
	input.

2013-07-11  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad.c (init_validator): Add "severity" and alias "new_severity",
	based on "min_cvss_base" but also accepting integer values.

	* src/html/gsad_omp.c (create_override_omp): Add command parameter
	"new_severity".

	* src/html/omp.xml (html-create-override-form): Add "New Severity"
	input.

2013-07-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (report): Flush trailing whitespace.
	(get_trash): Correct spelling.

2013-07-10  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/help.xsl (powerfilter.html): Describe regex options.

2013-07-10  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/html/omp.xsl (override [override], override [details]): Use
	bar for new_severity if it is > 0.0 instead of new_threat.